--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "cypress": "^7.6.0",
     "mocha": "^9.0.2"
+  },
+  "scripts": {
+    "cypress": "node_modules/.bin/cypress open"
   }
 }
